Fixed overflow

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -10,6 +10,7 @@ body {
     Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
   box-sizing: border-box;
   overscroll-behavior: none;
+  height: 100vh;
 }
 
 a {
@@ -23,7 +24,7 @@ a {
 :root,
 body,
 #__next {
-  height: 100%;
+  height: 100vh;
   margin: 0;
   padding: 0;
   width: 100%;
@@ -41,6 +42,7 @@ main {
   display: flex;
   flex: 1;
   flex-direction: column;
+  background: #1e293b;
 }
 
 #main-content {
@@ -58,7 +60,7 @@ main {
 .posts {
   display: flex;
   flex-direction: row;
-
+  padding-bottom: 50px;
   max-width: 1200px;
   flex-wrap: wrap;
   justify-content: center;
